--- a/notebooks/1.0-sh-imdb-text-mining.ipynb
+++ b/notebooks/1.0-sh-imdb-text-mining.ipynb
@@ -21,21 +21,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import os\n",
     "import json\n",
-    "import requests"
+    "\n",
+    "import requests\n",
+    "\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "#find .env automagically by walking up directories until it's found\n",
+    "dotenv_path = find_dotenv()\n",
+    "# load up the entries as environment variables\n",
+    "load_dotenv(dotenv_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'c5549205'\n",
+    "API_KEY = os.environ.get('OMDB_API_KEY')\n",
     "\n",
     "def get_movie_data(name, year=None, api_key=API_KEY, full_plot=False):\n",
     "    \"\"\"Returns json from OMDb API for movie.\"\"\"\n",
@@ -83,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,24 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Movie not found!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-65-122798de72dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_movie_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Snakes on a Plan'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-63-5178f88cc517>\u001b[0m in \u001b[0;36mget_movie_data\u001b[0;34m(name, year, api_key, full_plot)\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0;31m# Throw error if movie not found\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Response'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'False'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Error'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Movie not found!"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception: Movie not found!\n"
      ]
     }
    ],
    "source": [
-    "get_movie_data('Snakes on a Plan')"
+    "try:\n",
+    "    get_movie_data('Snakes on a Plan')\n",
+    "except Exception as e:\n",
+    "    print('Exception:', e)"
    ]
   },
   {
@@ -215,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -286,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -395,7 +412,7 @@
        "95                                             Serial          NaN   Republic  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
