--- a/notebooks/2.0-sh-wikipedia-crawl.ipynb
+++ b/notebooks/2.0-sh-wikipedia-crawl.ipynb
@@ -36,10 +36,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "#find .env automagically by walking up directories until it's found\n",
+    "dotenv_path = find_dotenv()\n",
+    "# load up the entries as environment variables\n",
+    "load_dotenv(dotenv_path)"
    ]
   },
   {
