Added exploratory data analysis and modeling notebooks for film genres. Spell check and minor edits to other notebooks.

--- a/notebooks/1.0-sh-imdb-text-mining.ipynb
+++ b/notebooks/1.0-sh-imdb-text-mining.ipynb
@@ -12,11 +12,11 @@
     "\n",
     "### 1.1. The OMDb API\n",
     "\n",
-    "We're going to use the OMDb API, which is free once again (http://www.omdbapi.com/). To use it, you need to get an API key. You can get a free key, which limits to 1000 requests per day. More requests (and a poster API) are avilable if you patronize the OMDb Patreon. The OMDb website explains how the API works pretty well. We'll use the `requests` package to make calls to the OMDb API. \n",
+    "We're going to use the OMDb API, which is free once again (http://www.omdbapi.com/). To use it, you need to get an API key. You can get a free key, which limits to 1000 requests per day. More requests (and a poster API) are available if you patronize the OMDb Patreon. The OMDb website explains how the API works pretty well. We'll use the `requests` package to make calls to the OMDb API. \n",
     "\n",
     "There are two ways we can get movie data using this API, either by movie title or IMDb ID. We'll want to be able to handle either, as I have a feeling that it will be easier to get a random list of IMDb ID's than a random list of movie titles? It is also more exact to use ID's since movie titles aren't unique (e.g.,\"The Mummy\" can either refer to the Brendan Fraser masterpiece, or the Tom Cruise dumpster fire).\n",
     "\n",
-    "Note, I'm using format strings (`f'some {text}'`) which is a Python 3.6 feature (equivalent to `'some {}.format(text)'`). If you want to run this on 3.5 or something, uh change it all by hand."
+    "Note, I'm using format strings (`f'some {text}'`) which is a Python 3.6 feature (equivalent to `'some {}.format(text)'`)."
    ]
   },
   {
@@ -169,7 +169,7 @@
     "\n",
     "Genre classification might be a fun one, but is well-tread territory at this point. Maybe we'll train a classifier to determine based off of a movie pitch (aka plot summary) whether or not Samuel L. Jackson would be in it. This seems like a nice balance between interesting, and easy to do.\n",
     "\n",
-    "Note there is a `Response` field in the repsonse, which is `\"True\"` if the movie is found, and `\"False\"` if not. At the moment I feel like it would be better to catch this early on in the process, so we added a few lines to throw an Exception when the movie is not found in the database."
+    "Note there is a `Response` field in the response, which is `\"True\"` if the movie is found, and `\"False\"` if not. At the moment I feel like it would be better to catch this early on in the process, so we added a few lines to throw an Exception when the movie is not found in the database."
    ]
   },
   {
@@ -207,7 +207,7 @@
    "source": [
     "### 1.2. Getting a List of Movies\n",
     "\n",
-    "Using `requests` we now have a way of extracting data about a film, given its title. Now all we need is a list of movies over which to iterate. After a bit of googling, I found a wikipedia page listing movies, but it is organized through several subpages. We'll use the BeautifulSoup package to crawl these pages to generate our list of movies.\n",
+    "Using `requests` we now have a way of extracting data about a film, given its title. Now all we need is a list of movies over which to iterate. After a bit of googling, I found a Wikipedia page listing movies, but it is organized through several subpages. We'll use the BeautifulSoup package to crawl these pages to generate our list of movies.\n",
     "\n",
     "There are two paths of attack:\n",
     "1. `https://en.wikipedia.org/wiki/Lists_of_films` has data on every movie ever made. There are a few different hierarchies movies are classified by on this. This catalogs every movie ever made.\n",
@@ -217,17 +217,17 @@
     "\n",
     "For this part I used this tutorial https://goo.gl/Bm1cdD (sort of).\n",
     "\n",
-    "A webpage is basically a tree with nodes labeled by tags. BeautifulSoup packages this tree in an object that is easy to navigate and search, based off of the html tags attached to the nodes. Here's how we are going to pull the movie data for any given year.\n",
+    "A web page is basically a tree with nodes labeled by tags. BeautifulSoup packages this tree in an object that is easy to navigate and search, based off of the html tags attached to the nodes. Here's how we are going to pull the movie data for any given year.\n",
     "1. We pull the raw html using requests and passing the url to a `GET` request.\n",
     "2. Dump the html string into a BeautifulSoup object.\n",
     "3. From inspecting the raw html it looks like the data we want is always in a table, which we can find with the `table` tag. There are some other tables, such as the footers and page navigation that we don't want. Again from inspection, it looks like the tables we do want always have `class=wikitable`.\n",
-    "4. The tables are then split into rows. A row either consitsts of headers (`th` table header tag) or data (`td` table data tag). We pull this, put it in a data frame if we actually get data, and skip if we get an error putting it into the data frame.\n",
+    "4. The tables are then split into rows. A row either consists of headers (`th` table header tag) or data (`td` table data tag). We pull this, put it in a data frame if we actually get data, and skip if we get an error putting it into the data frame.\n",
     "\n",
-    "When we first wrote the `fetch_movie_data` function below, we did not have the `drop_colspan` feature Or the 1919 correction. When it was ranon all time, there were a few problems:\n",
+    "When we first wrote the `fetch_movie_data` function below, we did not have the `drop_colspan` feature Or the 1919 correction. When it was ran on all time, there were a few problems:\n",
     "1. Starting in 2014, the movie lists have an \"Opening\" data column, whose entries span multiple rows. Even though our script didn't throw any errors for 2015 the data gathered is wrong: actors are listed as movie titles, titles are listed as opening dates, and so on. These cells have tags with colspan attributes, which are larger than 1. To fix this we added the `drop_colspan` flag, which does not include columns that span multiple cells.\n",
     "2. There is a \"typo\" on the page for 1919. The very last row of the table has an extra cell. Not sure what the best way to deal with this one edge case is. I ended up counting the number of columns read, and only take that many cells for the data rows.\n",
     "\n",
-    "There are definitely better ways to handle these problems. In particular, my solution assumes the multicolumns are all up front in the table, and that the multicolumn and the 1919 typo don't coincide on any page."
+    "There are definitely better ways to handle these problems. In particular, my solution assumes the multi-columns are all up front in the table, and that the multicolumn and the 1919 typo don't coincide on any page."
    ]
   },
   {
@@ -485,7 +485,7 @@
     "\n",
     "### 1.3. Combining Everything\n",
     "\n",
-    "Note to future self: When running this we got fewer results when requesting full synopsis. The API only return results with a full synposis if requested."
+    "Note to future self: When running this we got fewer results when requesting full synopsis. The API only return results with a full synopsis if requested."
    ]
   },
   {
