--- a/notebooks/1.1-sh-imdb-text-mining.ipynb
+++ b/notebooks/1.1-sh-imdb-text-mining.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# ML: Movie Learning\n",
     "\n",
-    "We're going to do some form of movie text wrangling using Python. At this point, we have aquired a list of movie titles, along with some other data scraped from Wikipedia. Unfortunately, these other data are inconsistently formatted and will be a bit difficult to work with. Since we want to get plot synopses from the OMDb API anyway, we can get these other data of interest from here as well.\n",
+    "We're going to do some form of movie text wrangling using Python. At this point, we have acquired a list of movie titles, along with some other data scraped from Wikipedia. Unfortunately, these other data are inconsistently formatted and will be a bit difficult to work with. Since we want to get plot synopses from the OMDb API anyway, we can get these other data of interest from here as well.\n",
     "\n",
     "\n",
     "\n",
@@ -14,11 +14,11 @@
     "\n",
     "### 1.1. The OMDb API\n",
     "\n",
-    "We're going to use the OMDb API, which is free once again (http://www.omdbapi.com/). To use it, you need to get an API key. You can get a free key, which limits to 1000 requests per day. More requests (and a poster API) are avilable if you patronize the OMDb Patreon. The OMDb website explains how the API works pretty well. We'll use the `requests` package to make calls to the OMDb API. \n",
+    "We're going to use the OMDb API, which is free once again (http://www.omdbapi.com/). To use it, you need to get an API key. You can get a free key, which limits to 1000 requests per day. More requests (and a poster API) are available if you patronize the OMDb Patreon. The OMDb website explains how the API works pretty well. We'll use the `requests` package to make calls to the OMDb API. \n",
     "\n",
     "There are two ways we can get movie data using this API, either by movie title or IMDb ID. We'll want to be able to handle either, as I have a feeling that it will be easier to get a random list of IMDb ID's than a random list of movie titles? It is also more exact to use ID's since movie titles aren't unique (e.g.,\"The Mummy\" can either refer to the Brendan Fraser masterpiece, or the Tom Cruise dumpster fire).\n",
     "\n",
-    "Note, I'm using format strings (`f'some {text}'`) which is a Python 3.6 feature (equivalent to `'some {}.format(text)'`). If you want to run this on 3.5 or something, uh change it all by hand."
+    "Note, I'm using format strings (`f'some {text}'`) which is a Python 3.6 feature (equivalent to `'some {}.format(text)'`)."
    ]
   },
   {
@@ -104,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
