--- a/notebooks/2.0-sh-wikipedia-crawl.ipynb
+++ b/notebooks/2.0-sh-wikipedia-crawl.ipynb
@@ -14,20 +14,20 @@
     "\n",
     "As a starting point I'll just do the easier thing and use the American movie list. In the future if we want more training data then we can revisit getting foreign films. \n",
     "\n",
-    "There are a couple inconsistancies between the different years' pages, which we will have to consider:\n",
+    "There are a couple inconsistencies between the different years' pages, which we will have to consider:\n",
     "1. Movies before 1900 have a single page and are held in a single table with multi-column spans grouping the different years.\n",
-    "2. Starting around 2014, there is are multi-row spans for the film's opening month: there is a tacky vertical box spelling out the month name vertically over multiple rows. Worse still the day of the month is then in a seperate column with multi-row spans, and these two columns are grouped together into a single \"Opening\" column. \n",
+    "2. Starting around 2014, there is are multi-row spans for the film's opening month: there is a tacky vertical box spelling out the month name vertically over multiple rows. Worse still the day of the month is then in a separate column with multi-row spans, and these two columns are grouped together into a single \"Opening\" column. \n",
     "3. Other pages have tables split up by first letter of the name of the film, and don't necessarily have the same column names from table to table, even within a single year's page.\n",
     "4. Occasionally there is a typo in the table. An empty cell may not have been coded in, or an extra cell may be unintentionally present in one row. As Wikipedia is crowd-edited, these errors may randomly pop up and go away as edits are made.\n",
     "\n",
     "\n",
     "## 1. Generalities on web crawling tables\n",
     "\n",
-    "A webpage is basically a tree with nodes labeled by tags. `BeautifulSoup` packages this tree in an object that is easy to navigate and search, based off of the html tags attached to the nodes. Here's how we are going to pull the movie data for any given year.\n",
+    "A web page is basically a tree with nodes labeled by tags. `BeautifulSoup` packages this tree in an object that is easy to navigate and search, based off of the html tags attached to the nodes. Here's how we are going to pull the movie data for any given year.\n",
     "1. We pull the raw html using a `GET` request. It is generally frowned upon to make many requests to a website in a short period of time. For us this means that a request may be denied if too many are made too quickly. So, after each page we should pause for a moment.\n",
     "2. Dump the html into a `BeautifulSoup` object.\n",
     "3. From inspecting the raw html it looks like the data we want is always in a table, which we can find with the `<table>` tag. There are some other tables, such as the footers and page navigation that we don't want. Again from inspection, it looks like the tables we do want always have a `class=wikitable` attribute.\n",
-    "4. The tables are then split into table rows, as indicated by a `<tr>` tag.. A row either consitsts of headers (`<th>` table header tag) or data (`<td>` table data tag), or a combination of the two. "
+    "4. The tables are then split into table rows, as indicated by a `<tr>` tag.. A row either consists of headers (`<th>` table header tag) or data (`<td>` table data tag), or a combination of the two. "
    ]
   },
   {
@@ -56,7 +56,7 @@
    "source": [
     "## 2. Pulling from tables\n",
     "\n",
-    "As each Wikipedia film page generallhy has the data seperated into several tables, the first step is to make a function that can process a single table. For prototyping we take a sample of a (portion of) one of the tables we are interested in parsing. \n",
+    "As each Wikipedia film page generally has the data separated into several tables, the first step is to make a function that can process a single table. For prototyping we take a sample of a (portion of) one of the tables we are interested in parsing. \n",
     "\n",
     "(Aside: For some reason I got it into my head that it is bad practice to use docstrings for long, multiline strings because they are meant for documentation purposes. I'm only using them here because, well, prototyping. Also, I can't justify why using docstrings as strings is actually bad practice.)"
    ]
@@ -189,7 +189,7 @@
     "\n",
     "Again, simply finding all the `<td>` tags in a row for the data is too naive. The first issue is that there are multirows where a single value is spread over cells in multiple rows of the table. The second issue is that some tables have typos and a cell in a row is not coded. To deal with these issues, we will take the column of the table as an immutable specification of how many cells there should be per row. \n",
     "\n",
-    "To deal with multirows, we will need a `counter` which propagates values from earlier in the table for however many rows as specified by a multirow attribute when encountered. If a row is having values propagated to it from earlier in the table, it will have fewer `<td>` tags than expected. If a row has multiple cells with values being propogated, then the mapping between cell number and data tags is not direct (though it is monotonic). We will deal with this by incrementing over the table row only when a value is not propagated using a `cell_cursor`.\n",
+    "To deal with multirows, we will need a `counter` which propagates values from earlier in the table for however many rows as specified by a multirow attribute when encountered. If a row is having values propagated to it from earlier in the table, it will have fewer `<td>` tags than expected. If a row has multiple cells with values being propagated, then the mapping between cell number and data tags is not direct (though it is monotonic). We will deal with this by incrementing over the table row only when a value is not propagated using a `cell_cursor`.\n",
     "\n",
     "Most missing or extra data cells only occur at the end of a row, as anywhere else would cause the cells of the row to be misaligned with the headers and more easily seen by editors of the page. So, we can also deal the missing cell issue by filling in the rest of the cells of a row with `None` after the `cell_cursor` has reached the end of the table row."
    ]
@@ -481,9 +481,9 @@
     "\n",
     "### 3.1. Cells with too much information\n",
     "\n",
-    "The `text` attribute in BeautifulSoup is perhaps too aggressive in stripping tags from text fields, and leaving us with the concatenated \"Cast\" names above. A more cautious approach would be to leave a marker where tags were stripped, and deal with them later. This may be more practiable, as different columns would need to be handled separately, which would be assuming too much structure from table to table on Wikipedia. For example in the `List_of_American_films_of_2015` table the `<br \\>` tags seperate actors in the \"Cast\" column, but spread out a note over multiple lines in the \"Notes\" column. \n",
+    "The `text` attribute in BeautifulSoup is perhaps too aggressive in stripping tags from text fields, and leaving us with the concatenated \"Cast\" names above. A more cautious approach would be to leave a marker where tags were stripped, and deal with them later. This may be more practicable, as different columns would need to be handled separately, which would be assuming too much structure from table to table on Wikipedia. For example in the `List_of_American_films_of_2015` table the `<br \\>` tags separate actors in the \"Cast\" column, but spread out a note over multiple lines in the \"Notes\" column. \n",
     "\n",
-    "There is a `stripped_strings` attribute in BeautifulSoup which returns a generator of the text which we can then for example join with whatever seperator we want."
+    "There is a `stripped_strings` attribute in BeautifulSoup which returns a generator of the text which we can then for example join with whatever separator we want."
    ]
   },
   {
@@ -545,6 +545,13 @@
     "\n",
     "Each page typically has multiple tables. Unfortunately, even on a single page not all the tables have the same column header names. This causes Pandas to add extra columns when we append multiple data frames together from the tables from a single page. Specifically, the 1962 page has a \"Notes/Studio\" column in the first table which is renamed to just \"Notes\" in all subsequent tables. The solution we went with was to take the columns from the first table on a page as master, and force all subsequent tables to have the same column names. Another option would to just let Pandas do its thing, and deal with this later."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
