Added script for model training.

--- a/notebooks/5.0-sh-genre-modeling.ipynb
+++ b/notebooks/5.0-sh-genre-modeling.ipynb
@@ -38,24 +38,14 @@
     }
    ],
    "source": [
-    "import glob\n",
-    "import re\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "plt.style.use('seaborn')\n",
     "\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.model_selection import (\n",
-    "    train_test_split, RandomizedSearchCV\n",
-    ")\n",
-    "# from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "# from sklearn.linear_model import LogisticRegression\n",
-    "# from sklearn.svm import SVC\n",
-    "# from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.metrics import (\n",
     "    classification_report, confusion_matrix, accuracy_score, \n",
@@ -588,26 +578,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('wordvectorizer', WordVectorizer(model=<gensim.models.keyedvectors.Word2VecKeyedVectors object at 0x62244cf60>,\n",
-       "        stopwords=['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him'...estimators=1, n_jobs=4,\n",
-       "            oob_score=False, random_state=42, verbose=0, warm_start=False))])"
+       "{'bootstrap': True,\n",
+       " 'class_weight': None,\n",
+       " 'criterion': 'gini',\n",
+       " 'max_depth': 9,\n",
+       " 'max_features': 'auto',\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_impurity_split': None,\n",
+       " 'min_samples_leaf': 15,\n",
+       " 'min_samples_split': 13,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'n_estimators': 1,\n",
+       " 'n_jobs': 4,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': 42,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# View parameters of the tuned model\n",
-    "classifier.best_estimator_"
+    "classifier.best_estimator_.named_steps['randomforestclassifier'].get_params()"
    ]
   },
   {
